--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,8 @@ on:
     branches: 
       - master
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
