--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: ''30 */6 * * *''
+    - cron: '30 */6 * * *'
   workflow_dispatch:
 
 jobs:
